added icons changed manifest and preped release

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <h1>Combined Chat Viewer</h1>
+    <h1>MultiStream Chats Beta</h1>
     <div id="chat-container"></div>
     <button id="all-messages-btn">View All Messages</button>
     <script src="popup.js"></script>
